# replay-studio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_Football_Replay_Product_Brief.md  README.md  docker-compose.dev.yml  docker-compose.mps.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: analysis_cancellation.py  analysis_frame_generation.py  analysis_frame_generation_pipeline.py  analysis_frame_generation_scene.py  analysis_run_contract.py  analysis_run_repository.py  analysis_run_telemetry.py  analysis_runtime.py  artifact_store.py  ball_candidate_selection.py  ball_contracts.py  ball_detection.py  ball_detection_cache.py  ball_detection_cache_codec.py  ball_detection_cache_contract.py  ball_detection_configuration.py  ball_detection_contract.py  ball_detector_factory.py  ball_frame_input.py  ball_frames.py  ball_tracking.py  ball_tracking_candidates.py  ball_tracking_contract.py  ball_tracking_solver.py  ball_trajectory_materialization.py  ball_trajectory_projection.py  ball_worker.py  bounding_box_geometry.py  calibration_anchor_cache.py  calibration_contracts.py  calibration_worker.py  camera_motion_contract.py  canonical_match.py  canonical_match_persistence.py  checkpoint_identity.py  closed_set_roster_resolution.py  config.py  database.py  database_transaction.py  direct_calibration_sampling.py  (+342 more)
apps/api/tests/: test_analysis_cancel_race.py  test_analysis_runtime.py  test_anchor_demotion.py  test_api_football_architecture.py  (+128 more)
(+429 files in other folders)
