[project]
name = "replay-studio-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "redis>=5.2,<6",
  "python-multipart>=0.0.20,<1",
  "ultralytics>=8.4,<9",
  "scipy>=1.12,<2"
]

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
